Banner section added

--- a/index.html
+++ b/index.html
@@ -26,5 +26,19 @@
         </nav>
     </header>
 
+    <!-- Banner section start here image and text -->
+     <main>
+        <section class="bannerBd">
+            <div class="text">
+                <span>Bangladesh 2.0</span>
+                <h3>Idea, Innovasion,<br> Vision and challenges in <br> New Bangladesh.</h3>
+                <a href="#" class="expBtn">Explore New Bangladesh</a>
+            </div>
+            <div class="image">
+                <img src="assets/hero.png" alt="">
+            </div>
+        </section>
+     </main>
+
 </body>
 </html>
