Pillars section added

--- a/index.html
+++ b/index.html
@@ -40,5 +40,35 @@
         </section>
      </main>
 
+          <!-- Bangladesh 2.0 Pillars section start -->
+
+     <section class="pillars">
+        <div class="text">
+            <h3>Pillars of "Bangladesh 2.0"</h3>
+        </div>
+        <div class="plBox">
+            <div class="plCard">
+                <img src="assets/card-icon.png" alt="card-icon">
+                <h4>Digital Transformation</h4>
+                <p> Expanding digital services to improve governance, education, and healthcare systems.</p>
+            </div>
+            <div class="plCard">
+                <img src="assets/card-icon.png" alt="card-icon">
+                <h4>Sustainable</h4>
+                <p>Promoting green technologies and environmental conservation for long-term growth.</p>
+            </div>
+            <div class="plCard">
+                <img src="assets/card-icon.png" alt="card-icon">
+                <h4>Entrepreneurship</h4>
+                <p> Fostering startups, innovation, and new business models for economic progress.</p>
+            </div>
+            <div class="plCard">
+                <img src="assets/card-icon.png" alt="card-icon">
+                <h4>Inclusive Growth</h4>
+                <p>Creating equal opportunities for marginalized groups, women, and rural populations.</p>
+            </div>
+        </div>
+     </section>
+
 </body>
 </html>
