Yonus quotes Added

--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
             </div>
         </div>
      </section>
+          <!-- Quote section start here -->
+
+     <section class="quote">
+        <div class="bg">
+            <p>"The only way to move a country forward is by empowering individuals, especially the poor. When we create opportunities for the underprivileged, encourage entrepreneurship, and foster innovation, we enable everyone to contribute to society's progress. A country can only truly advance when no one is left behind, and every person has the chance to succeed and grow."</p>
+            <h5>Dr. Muhammad Yunus</h5>
+            <span>Chief Adviser of the People's Republic of Bangladesh</span>
+        </div>
+     </section>
 
 </body>
 </html>
