--- a/index.html
+++ b/index.html
@@ -106,5 +106,53 @@
         </div>
      </section>
 
+        <!-- Recent news section start here -->
+
+        <section class="recentNews">
+            <div class="title">
+                <h3>Recent News</h3>
+                <P>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</P>
+            </div>
+            <div class="blog">
+                <div class="img">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+                <div class="text">
+                    <h4>Bangladesh Launches New Satellite</h4>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <p>Date: 11/01/2025  Time: 12.59PM</p>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <div class="blog">
+               
+                <div class="text">
+                    <h4>Bangladesh Launches New Satellite</h4>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <p>Date: 11/01/2025  Time: 12.59PM</p>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <a href="#">Read More</a>
+                </div>
+                <div class="img">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+            </div>
+            <div class="blog">
+                <div class="img">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+                <div class="text">
+                    <h4>Bangladesh Launches New Satellite</h4>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <p>Date: 11/01/2025  Time: 12.59PM</p>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
