--- a/index.html
+++ b/index.html
@@ -154,5 +154,25 @@
                 </div>
             </div>
         </section>
+
+        <!-- Donate section start here -->
+
+        <section class="donate">
+            <div class="title12">
+                <h3 class="">Donate Today</h3>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            </div>
+            <div class="amount">
+                <p>100 Taka</p>
+                <p class="bg">200 Taka</p>
+                <p>500 Taka</p>
+                <P>1000 Taka</P>
+            </div>
+            <div class="input">
+                <input type="text" placeholder="Other Amount (Taka)">
+                <input type="submit" value="Donate Now">
+            </div>
+        </section>
+
 </body>
 </html>
