subscribe section added

--- a/index.html
+++ b/index.html
@@ -174,5 +174,20 @@
             </div>
         </section>
 
+
+        <!-- subscribe section start here -->
+
+        <section class="subscribe">
+            <div class="subT">
+                <h3>Subscribe Newsletter</h3>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+            </div>
+            <div class="inputs">
+                <input type="email" placeholder="Enter Your Email">
+                <input type="submit" value="Subscribe"> <br><br>
+                <p style="font-size: 14px;">We promise not to spam you!</p>
+            </div>
+        </section>
+
 </body>
 </html>
