footer section added

--- a/index.html
+++ b/index.html
@@ -189,5 +189,10 @@
             </div>
         </section>
 
+        <!-- footer start here -->
+        <footer>
+           <h3 class="footers">Bangladesh 2.0</h3>
+           <p class="footers" style="font-size: 14px; margin-top: -30px;">&#169;2025 All Right Reserved</p>
+        </footer>
 </body>
 </html>
